tab name change

--- a/QC/scripts/rflex_dashboard.Rmd
+++ b/QC/scripts/rflex_dashboard.Rmd
@@ -399,7 +399,7 @@ leafletOutput("map")
 
 ```
 
-Growth 2014-40
+Growth
 =======================================================================
 
 ```{r}
